Align error message correctly with field

--- a/packages/core-types/addon/styles/addon.css
+++ b/packages/core-types/addon/styles/addon.css
@@ -7,7 +7,6 @@
   color: var(--error-color);
   background-color: var(--error-background);
   font-size: 0.8rem;
-  width: 100%;
   padding: 0.25rem;
 }
 
